syntax = "proto3";

message Player {
  string id = 1;
  string name = 2;
  string icon = 3;
  string color = 4;
  int32 score = 5;
}

message Task {
  string name = 1;
  repeated string colors = 2;
}

message Event {
  int32 elapsedTimeS = 1;
  string message = 2;
}

message GameStateUpdate {
  string checksum = 1;
  string startTimestamp = 2;
  repeated Player players = 3;
  repeated Task tasks = 4;
  repeated Event events = 5;
}

message TaskFilters {
  repeated string includedTags = 1;
  repeated string excludedTags = 2;
}

message SessionOptionsUpdate {
  int32 checksum = 1;
  int32 seed = 2;
  TaskFilters taskFilters = 3;
  bool isLockout = 4;
  int32 timeLimitMinutes = 5;
}

message TaskUpdate {
  int32 index = 1;
  bool isCompleted = 2;
}

message ApiMessageEnvelope {
  string type = 1;

  oneof payload {
    string id = 2;
    GameStateUpdate gameState = 3;
    SessionOptionsUpdate options = 4;
    Player profile = 5; 
    TaskUpdate task = 6;
  }
}